# contain-yourself

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  buf.gen.yaml  go.mod  go.sum  package.json  pyproject.toml
.cache/clangd/index/: main.cpp.545FC69CF5AB42A2.idx
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check-code.yaml
.trunk/: trunk.yaml
.trunk/configs/: mypy.ini
cpp/: main.cpp
go/: main.go
go/hello_grpc/: main.go
go/hello_world/: main.go
proto/: hello_world.proto
proto/hello_world/v1/: api.proto
python/: main.py
swig/: main.go
swig/adder/: adder.hpp
typescript/: main.ts
